added image folder, and images

--- a/index.html
+++ b/index.html
@@ -15,30 +15,39 @@
         </header>
         
     <nav>
-        <a href="#">My first dev project!</a>
-        <a href="#">My hobbies and interests</a>
-        <a href="#">My contributions</a>
+        <a href="#dev_project">My first dev project!</a>
+        <a href="#about_me">My hobbies and interests</a>
+        <a href="#my_contributions">My contributions</a>
     </nav>
 
         <main>
             <section>
-                <div>
+                <div1 id="about_me">
                     <h2>About me!</h2>
-                    <img src="./images/Country Dancing.jpg" alt="Silhouette of country dancing" />
-                    <ui>
-                    <li> I like to country dance.</li>
-                    <li> I love to play video games with friends.</li>
-                    <li> I enjoy interacting with other cultures.</li>
-                    <li> I am actually 6'6, still working on that business card.</li>
-                    </ui>
+                    <!--<a> <img src="./images/Country Dancing.jpg" alt="Silhouette of country dancing"  class="center"/>
+                        </a> Commenting this out because I don't like it.!-->
+                    <p>
+                    Hello, my name is Jeffrey Phoenix. I am an amatuer coder, and have enjoyed the many challenges that this course has given me.
+                    I stand tall at 6'6, enjoy reading, coding, line dancing, and gaming in my free time. 
+                   </p>
+                </div1>
+
+                <div id="dev_project">
                     <section>
-                        <h3> My hobbies and interests</h3>
-                        <img src="" alt="" >
-                    </section>
-                    <section>
-                        <h4>Things I've helped out with</h4>
+                        <h3> First Dev project</h3>
+                        <a> <img src="./images/hackerman.webp" alt="Laptop with blobs of text" 
+                            class="center">
+                        </a>
                     </section>
                 </div>
+                <div1 id="my_contributions"> <!--Used ID="href nav bar" to make page smooth scroll to various catergories of my pages-->
+                    <section>
+                    <h4>Things I've helped out with</h4>
+                    <a> <img src="./images/pair program.jpg" alt="two people sitting at a desk talking over a computer" width="width" height="height"
+                        class="center">
+                    </a>
+                </section>
+                </div1>
             </section>
     </main>
 </body>
