final commit, made it phone accessible.

--- a/index.html
+++ b/index.html
@@ -40,14 +40,17 @@
                         </a>
                     </section>
                 </div>
-                <div1 id="my_contributions"> <!--Used ID="href nav bar" to make page smooth scroll to various catergories of my pages-->
+                <div id="my_contributions"> <!--Used ID="href nav bar" to make page smooth scroll to various catergories of my pages-->
                     <section>
                     <h4>Things I've helped out with</h4>
                     <a> <img src="./images/pair program.jpg" alt="two people sitting at a desk talking over a computer" width="width" height="height"
                         class="center">
                     </a>
+                    <h5>Big brain things up and coming.</h5>
+                    <p> this section is still under construction!</p>
                 </section>
-                </div1>
+
+            </div>
             </section>
     </main>
 </body>
